Fix broken ErrorPage on Android by adding overflow:hidden to gradient-container

--- a/patterns/core/ErrorPage/errorPage.styl
+++ b/patterns/core/ErrorPage/errorPage.styl
@@ -22,6 +22,7 @@ $breakpoint-medium = 1000px
   left 0
   right 0
   z-index var(--z-index-lowest)
+  overflow hidden
 
   @media (min-width $breakpoint-medium)
     height 45rem
